Fix bootstrap navbar-fixed-top overlap issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,6 @@
  *= require_self
  *= require_tree .
  */
+
+/*Fix bootstrap navbar-fixed-top overlap issue*/
+ body { padding-top: 40px; }
